--- a/Vector/CMakeLists.txt
+++ b/Vector/CMakeLists.txt
@@ -3,5 +3,5 @@ project(Vector)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp MyVector.cpp MyVector.h)
+set(SOURCE_FILES main.cpp MyVector.cpp MyVector.h fib.h)
 add_executable(Vector ${SOURCE_FILES})
